--- a/styles/main.css
+++ b/styles/main.css
@@ -1,49 +1,133 @@
-html {
+html, body {
+    height: 100%;
+    margin: 0;
+    font-family: "Helvetica Regular", sans-serif;
+    font-size: 26px;
+}
+@font-face {
+    font-family: "Helvetica Regular";
+    src: url("/fonts/helvetica_regular.otf");
+    font-size: 12px;
+    font-weight: normal;
+}
+@font-face {
+    font-family: "Helvetica Bold";
+    src: url("/fonts/helvetica_bold.otf");
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.fill-w {
+    width: 100%;
+}
+.fill-h {
     height: 100%;
 }
-.container {
-    height: 220px;
-    width: 70%;
-    margin: auto;
-
-    box-shadow:inset 0 0 0 1px black;
-}
-.element {
-    box-shadow:inset 0 0 0 1px black;
-
-    text-align: center;
-    transition: all .3s ease-in-out;
-    background-color: lightgray;
-    margin: 10px;
-    display: inline-block;
-}
-.element + p {
-    height: 18px;
-    /*margin: auto;*/
-}
-.w-h-200{
-    height: 200px;
-    width: 200px;
-}
-.w-h-200 *{
+#bg-container {
     position: relative;
-    top: 90px;
+    background-color: black;
+    background-size: cover;
+    background-image: url("../img/default-bg.png");
+}
+#shadows > *{
+    position: absolute;
+}
+#loader-wrapper {
+    display: none;
+    background-image: url("../img/black-bg-opacity-30.png");
+}
+#loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     margin: auto;
 }
-.w-200-h-80{
-    height: 90px;
-    width: 200px;
+.stick-left {
+    left: 0;
 }
-#elem1 {
-    float: left;
+.stick-right {
+    right: 0;
 }
-#elem2 {
-
+.stick-top {
+    top: 0;
 }
-#elem3 {
-
+#interface{
+    position: absolute;
+}
+#genres-line {
+    margin: 10px 0;
+    height: 48px;
+    color: #b3b3b3;
+    width: 1280px;
+    white-space: nowrap;
+}
+.genre {
+    bottom: 0;
+    color: #b3b3b3;
+    margin: 0 16px;
+    line-height: 48px;
+}
+.genre-selected {
+    font-size: 40px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+#movies-line {
+    margin-top: 48px;
+    white-space: nowrap;
+    overflow-x: hidden;
+    /*position: absolute;*/
+    /*top: 50%;*/
+    /*transform: translateY(-50%);*/
+    height: 320px;
+}
+.movie-card {
+    position: relative;
+    display: inline-block;
+    background-color: lightgray;
+    border-radius: 4px;
+    height: 250px;
+    width: 175px;
+    margin: 0 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: transform .3s ease-in;
+}
+.movie-selected {
+    transform: scale(125%);
+}
+#movie-info-line {
+    text-align: center;
+}
+h1 {
+    font-size: 44px;
+    font-family: "Helvetica Bold", sans-serif;
+    margin: 16px 0 30px 0;
+    color: #dddddc;
+}
+p {
+    margin: auto;
+    max-width: 90%;
+    color: #dddddc;
+}
+.age-rating{
+    font-family: "Helvetica Regular", sans-serif;
+    padding: 1px 6px 4px 6px;
+    color: #dddddc;
+    border-color: #dddddc;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 6px;
+}
+.star-icon {
+    height: 21px;
+    width: 22px;
+    background-image: url("../img/rating-star-icon.png");
 }
 .selected {
-    transform: scale(110%);
+    transform: scale(125%);
+    transform-origin: center;
+    margin: 20px;
     box-shadow:inset 0 0 0 2px red;
 }
