--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,4 +1,4 @@
-#menubar {z-index: 3;}
+#menubar {}
 #menu-center {
     position: relative;
     margin: 0 auto;
@@ -7,6 +7,7 @@
     transform: translate(-50%, 0);
 }
 #menu-right{
+    z-index: 3;
     position: absolute;
     margin: 0 auto;
     display: inline-block;
